--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,7 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* h1, h2, p, ul, li {
+  font-family: sans-serif;
 } */
 
-body {
-  background-color: #FFCC00;
-  padding: 20px;
-  margin: 0;
-}
-h1, h2, p, ul, li {
-  font-family: sans-serif;
-}
-ul.header li {
-  display: inline;
-  list-style-type: none;
-  margin: 0;
-}
-ul.header {
-  background-color: #111;
-  padding: 0;
-}
-ul.header li a {
-  color: #FFF;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 20px;
-  display: inline-block;
-}
 .content {
   background-color: #FFF;
   padding: 20px;
@@ -49,15 +15,59 @@ ul.header li a {
 }
 
 .active {
-  background-color: cadetblue;
 }
-
-textarea.post-content {
+.nav-text-color {
+  color: #9a9da0!important;
+}
+.nav-text-color:hover {
+  color: rgba(255,255,255,.75)!important;
+}
+.active-nav-link {
+  color: #f2f5f7!important;
+  font-weight: 600;
+}
+#nav-brand {
+  margin-right: 5px;
+}
+.home-60-divider {
   width: 50%;
-  height: 100px;
+  justify-content: left;
+}
+.home-40-divider {
+  width: 50%;
+  padding-left: 2%;
+  /* text-align: center!important; */
+}
+.home-content {
+  display:flex;
 }
 
-/* FIXME make the tags (which are button html elems) look better... */
-button.tagDecoration {
-  background-color: aliceblue;
+
+#create-blog-post-form-padding {
+  padding-bottom: 15px;
 }
+.textarea-min-height {
+  min-height: 100px;
+}
+/* apply styling to the td's that are direct children of tr's having class bottom-row */
+tr.bottom-border td {
+  border-bottom: 1px solid #7e7e7e;
+  border-top: none;
+  padding: 15px 0 30px 0;
+}
+.blog-post-column {
+  width:90%;
+}
+.blog-post-buttons-column {
+  width: 10%;
+}
+.blog-page-wrapper {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 1% 0 1%;
+}
+
+.tag-button {
+  margin-top: 20px;
+}
+
